# transports-wg

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  README.md
docs/: investigation-generalized-payload-to-header-mapping-mcp.md  sessions-reintroduction-problem-statement.md  sessions-vs-sessionless-decision.md  upcoming-tracks-roadmap.md
meetings/: 2026-01-07_weekly.md  2026-01-14_weekly.md  2026-01-21_weekly.md  2026-01-28_weekly.md  2026-02-04_weekly.md  2026-02-11_weekly.md  2026-02-18_weekly.md  2026-02-25_weekly.md  2026-03-04_weekly.md  2026-03-11_weekly.md  2026-03-18_weekly.md  2026-04-08_weekly.md  2026-04-15_weekly.md  2026-04-22_weekly.md  2026-04-29_weekly.md  2026-05-13_weekly.md  2026-05-20_weekly.md  2026-05-27_weekly.md  2026-06-03_weekly.md  2026-06-17_weekly.md  2026-06-24_weekly.md  2026-07-08_weekly.md  2026-07-15_weekly.md
proposals/: 0000-data-layer-sessions.md  0000-tasks-are-progress.md  MRTR-And-Tasks-Message-Structure-Proposal.md  MRTR-implementation-question.md  XXXX-MRTR.md  XXXX-capability-scope.md  XXXX-deterministic-primitive-surface-digest.md  XXXX-i18n-language-negotiation.md  XXXX-required-capabilities.md  XXXX-sessionless-mcp.md  data-layer-sessions-api-shapes.jsonc  data-layer-sessions.md  multi-round-trip-requests-proposal.md  multi-round-trip-requests-track-brief.md  sep-1685-revisions.md  session-track.md  (+4 more)
proposals/data-layer-sessions-server-python/: README.md  pyproject.toml
proposals/data-layer-sessions-server-python/src/mcp_sessions_server/: __init__.py  model.py  protocol.py  server.py  server_handlers.py  store.py
(+149 files in other folders)
