[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-data-layer-sessions-server-ref"
version = "0.1.0"
description = "Reference server package for MCP data-layer sessions proposal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MCP Transports WG Contributors" }]
keywords = ["mcp", "sessions", "proposal", "reference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = ["mcp>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sessions_server"]
